--- a/video-editor_2/package.json
+++ b/video-editor_2/package.json
@@ -9,6 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ffmpeg/core": "^0.12.10",
+    "@ffmpeg/ffmpeg": "^0.12.15",
+    "@ffmpeg/util": "^0.12.2",
     "@google-cloud/storage": "^7.16.0",
     "@google-cloud/text-to-speech": "^6.0.1",
     "@google/genai": "^0.8.0",
@@ -48,6 +51,7 @@
     "date-fns": "4.1.0",
     "dotenv": "^16.5.0",
     "embla-carousel-react": "8.5.1",
+    "ffmpeg": "^0.0.4",
     "input-otp": "1.4.1",
     "lucide-react": "^0.454.0",
     "next": "15.2.4",
