--- a/video-editor_2/package.json
+++ b/video-editor_2/package.json
@@ -9,9 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@ffmpeg/core": "^0.12.10",
-    "@ffmpeg/ffmpeg": "^0.12.15",
-    "@ffmpeg/util": "^0.12.2",
+    "@ffmpeg-installer/ffmpeg": "^1.1.0",
+    "@ffprobe-installer/ffprobe": "^2.1.2",
     "@google-cloud/storage": "^7.16.0",
     "@google-cloud/text-to-speech": "^6.0.1",
     "@google/genai": "^0.8.0",
@@ -43,6 +42,7 @@
     "@radix-ui/react-toggle": "^1.1.1",
     "@radix-ui/react-toggle-group": "^1.1.1",
     "@radix-ui/react-tooltip": "^1.1.6",
+    "@types/fluent-ffmpeg": "^2.1.27",
     "autoprefixer": "^10.4.20",
     "better-node-gtts": "^1.1.0",
     "class-variance-authority": "^0.7.1",
@@ -51,9 +51,11 @@
     "date-fns": "4.1.0",
     "dotenv": "^16.5.0",
     "embla-carousel-react": "8.5.1",
-    "ffmpeg": "^0.0.4",
+    "ffmpeg-static": "^5.2.0",
+    "fluent-ffmpeg": "^2.1.3",
     "input-otp": "1.4.1",
     "lucide-react": "^0.454.0",
+    "mkdirp": "^3.0.1",
     "next": "15.2.4",
     "next-themes": "^0.4.4",
     "node-gtts": "^2.0.2",
