--- a/video-editor_2/package.json
+++ b/video-editor_2/package.json
@@ -65,6 +65,7 @@
 		"react-h5-audio-player": "3.10.0-rc.1",
 		"react-hook-form": "^7.54.1",
 		"react-modal": "^3.16.3",
+		"react-player": "^2.16.0",
 		"react-resizable-panels": "^2.1.7",
 		"recharts": "2.15.0",
 		"sonner": "^1.7.1",
