--- a/video-editor_2/package.json
+++ b/video-editor_2/package.json
@@ -67,6 +67,7 @@
 		"react-modal": "^3.16.3",
 		"react-player": "^2.16.0",
 		"react-resizable-panels": "^2.1.7",
+		"react-toastify": "^11.0.5",
 		"recharts": "2.15.0",
 		"sonner": "^1.7.1",
 		"tailwind-merge": "^2.5.5",
