--- a/video-editor_2/package.json
+++ b/video-editor_2/package.json
@@ -9,6 +9,9 @@
 		"lint": "next lint"
 	},
 	"dependencies": {
+		"@dnd-kit/core": "^6.3.1",
+		"@dnd-kit/sortable": "^10.0.0",
+		"@dnd-kit/utilities": "^3.2.2",
 		"@ffmpeg-installer/ffmpeg": "^1.1.0",
 		"@ffprobe-installer/ffprobe": "^2.1.2",
 		"@google-cloud/storage": "^7.16.0",
