--- a/video-editor_2/package.json
+++ b/video-editor_2/package.json
@@ -62,6 +62,7 @@
 		"next": "15.2.4",
 		"next-themes": "^0.4.4",
 		"node-gtts": "^2.0.2",
+		"re-resizable": "^6.11.2",
 		"react": "^19",
 		"react-day-picker": "8.10.1",
 		"react-dom": "^19",
