--- a/video-editor_2/package.json
+++ b/video-editor_2/package.json
@@ -64,6 +64,7 @@
 		"node-gtts": "^2.0.2",
 		"re-resizable": "^6.11.2",
 		"react": "^19",
+		"react-contexify": "^6.0.0",
 		"react-day-picker": "8.10.1",
 		"react-dom": "^19",
 		"react-h5-audio-player": "3.10.0-rc.1",
