--- a/video-editor_2/package.json
+++ b/video-editor_2/package.json
@@ -9,6 +9,7 @@
 		"lint": "next lint"
 	},
 	"dependencies": {
+		"@auth/core": "^0.39.0",
 		"@dnd-kit/core": "^6.3.1",
 		"@dnd-kit/sortable": "^10.0.0",
 		"@dnd-kit/utilities": "^3.2.2",
@@ -47,6 +48,7 @@
 		"@radix-ui/react-tooltip": "^1.1.6",
 		"@types/fluent-ffmpeg": "^2.1.27",
 		"autoprefixer": "^10.4.20",
+		"axios": "^1.9.0",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
 		"cmdk": "1.0.4",
@@ -55,11 +57,13 @@
 		"embla-carousel-react": "8.5.1",
 		"ffmpeg-static": "^5.2.0",
 		"fluent-ffmpeg": "^2.1.3",
+		"form-data": "^4.0.2",
 		"google-translate-api-x": "^10.7.2",
 		"input-otp": "1.4.1",
 		"lucide-react": "^0.454.0",
 		"mkdirp": "^3.0.1",
 		"next": "15.2.4",
+		"next-auth": "5.0.0-beta.27",
 		"next-themes": "^0.4.4",
 		"node-gtts": "^2.0.2",
 		"re-resizable": "^6.11.2",
