--- a/video-editor_2/package.json
+++ b/video-editor_2/package.json
@@ -66,6 +66,8 @@
 		"next-auth": "5.0.0-beta.27",
 		"next-themes": "^0.4.4",
 		"node-gtts": "^2.0.2",
+		"primeicons": "^7.0.0",
+		"primereact": "^10.9.5",
 		"re-resizable": "^6.11.2",
 		"react": "^19",
 		"react-contexify": "^6.0.0",
